# hermes-omni-signal-engine

./: .gitignore  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
src/hermes_omni_signal_engine/: __init__.py  config.py  plugin.py  runner.py
tests/: test_config.py  test_maintainer_feedback.py  test_plugin.py  test_runner.py  test_stats_enhancement.py
