[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-omni-plugin"
version = "0.2.0"
description = "Hermes Agent plugin for local OMNI signal distillation and rewind retrieval"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Yuan Chin" }]
keywords = ["hermes", "hermes-agent", "plugin", "omni", "terminal", "token-savings", "local-first"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Terminals",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Wysie/hermes-omni-plugin"
Repository = "https://github.com/Wysie/hermes-omni-plugin"
Issues = "https://github.com/Wysie/hermes-omni-plugin/issues"
OMNI = "https://github.com/fajarhide/omni"

[project.entry-points."hermes_agent.plugins"]
hermes-omni-plugin = "hermes_omni_signal_engine"
# Backward-compatible alias for early installs/configs.
omni-signal-engine = "hermes_omni_signal_engine"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
